--- a/.github/ISSUE_TEMPLATE/custom-form.yaml
+++ b/.github/ISSUE_TEMPLATE/custom-form.yaml
@@ -1,9 +1,8 @@
 ---
 name: Custom Form
-about: From example page
-title: ''
-labels: ''
-assignees: ''
+title: 'Testery'
+labels: 'lblbl'
+assignees: 'meholden'
 
 ---
 
